--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,12 @@ h2 {
     text-align: center;
     font-size: 36px;
 }
+
+#wholeGamebox {
+    margin-top: 20px;
+    width: 600px;
+    height: 400px;
+    border: 5px;
+    border-style: solid;
+    border-color: #07410c;
+}
