--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,17 @@
     margin: 0 auto;
 }
 
+.header {
+    background-color: #000000;
+    color: #188321;
+    width: 80%;
+    margin-top: 20px;
+    margin-right: 10%;
+    margin-left: 10%;
+    border: 5px;
+    border-style: solid;
+    border-color: #188321;
+}
 h1 { 
     text-align: center;
     font-size: 48px;
@@ -18,5 +29,11 @@ h2 {
     height: 400px;
     border: 5px;
     border-style: solid;
-    border-color: #07410c;
+    border-color: #188321;
+    background-color: #000000
+}
+
+.everywhere {
+    height: 100%;
+    background-image: url(../images/matrixCode.gif)
 }
