--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,17 @@ h2 {
     font-size: 36px;
 }
 
+h3 {
+    text-align: center;
+}
+.fontColor {
+    color: #188321;
+}
+
 #wholeGamebox {
     margin-top: 20px;
     width: 600px;
-    height: 400px;
+    height: 450px;
     border: 5px;
     border-style: solid;
     border-color: #188321;
@@ -36,4 +43,8 @@ h2 {
 .everywhere {
     height: 100%;
     background-image: url(../images/matrixCode.gif)
+}
+
+.hangmanWord {
+    text-align: center;
 }
