--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,6 @@ h3 {
     background-image: url(../images/matrixCode.gif)
 }
 
-.currentHangmanWord {
+#currentHangmanWord {
     text-align: center;
 }
